<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:layout_marginTop="10sp"
        android:text="@string/Iniciar_sesion"
        android:textAlignment="center"
        android:textColor="@color/sena"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginBottom="30sp"
        app:srcCompat="@drawable/sena" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/Ingresar_correo"
        android:inputType="text"
        android:rotationY="0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:hint="@string/Ingresar_contraseña"
        android:inputType="text"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/button"
        android:layout_width="243dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/sena"
        android:text="@string/ingresar"

        android:textColorLink="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="243dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:backgroundTint="#F10909"
        android:text="@string/Ingresar_con_google"

        android:textColorLink="@color/sena" />

    <Button
        android:id="@+id/button3"
        android:layout_width="247dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:backgroundTint="#0865D3"
        android:text="@string/Crear_cuenta"

        android:textColorLink="@color/sena" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_margin="4sp"
        android:text="@string/Recuperar_contraseña"
        android:textAlignment="center" />


</LinearLayout>