<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Recuperar_contraseña"
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:textColor="@color/sena"
            android:textColorLink="@color/sena"
            android:textSize="24sp" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="325dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/sena" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:layout_marginBottom="30sp"
            android:hint="@string/Ingresar_correo"
            android:inputType="text"
            android:rotationY="0" />

        <Button
            android:id="@+id/button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/sena"
            android:text="@string/recuperar"
            android:textAlignment="center"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>